# tumbler-snapper

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cfg-term-resolution.md  corpus.md  cursor-recovery.md  deity-smc-provenance.md  design.md  driver-model.md  fixture-disassembly.md  follow-ups.md  gap-audit.md  irvm.md  orderlist-recovery.md  player-idioms.md  playroutine-decompilation.md  prior-art.md  prototype.md  recoverability-harness.md  roadmap.md  seq-coverage-survey.md  seq-replay-rung.md  sequencer-survey.md  smc-consolidation.md  survey-report.json  survey.md  tokens.md  tracker-model.md  vacuole-accessor-closure.md  verification-corpus.json  verification-corpus.md
prototypes/: recover.py  sequencer.py  tracker.py
src/tsnap/: __init__.py  cli.py  corpus.py  curate.py  density.py  exprkit.py  horizon.py  irvm.py  oracle.py  payload.py  recover.py  seqreplay.py  sequencer.py  survey.py  symrec.py  tokens.py  tracker.py
tests/: asm6502.py  conftest.py  fixtures.py  schedplayer.py  test_accum.py  test_audio.py  test_cli.py  test_container.py  test_corpus.py  test_curate.py  test_dataflow.py  test_density.py  test_disasm.py  test_dump.py  test_factor.py  test_filt.py  test_guards.py  test_horizon.py  test_hvsc.py  test_ir.py  test_irvm.py  test_melody.py  test_model.py  test_notes.py  test_oracle.py  test_oracle_stream.py  test_payload.py  test_pitch.py  test_recover.py  test_recover_corpus.py  test_recover_unit.py  test_recoverability.py  test_residual.py  test_seqreplay.py  test_sequencer_unit.py  test_song.py  test_state.py  test_structure.py  test_survey.py  test_synthetic.py  (+4 more)
tests/corpus/: build_manifest.py  build_trackers.py  manifest.json  scan_pitch_tables.py  survey_transforms.py  trackers.json
tools/: disasm.py  gap_audit.py  recoverability_survey.py  reroll_audit.py  seq_close_probe.py  seq_decode_livein_probe.py  seq_decode_probe.py  seq_schedule_probe.py  seqforms_audit.py  token_report.py
tumbler_snapper/: __init__.py  accum.py  audio.py  capture.py  cli.py  container.py  dataflow.py  dump.py  factor.py  filt.py  guards.py  ir.py  melody.py  model.py  notes.py  pitch.py  recover.py  residual.py  sidreg.py  song.py  state.py  structure.py  trace.py
