[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tumbler-snapper"
version = "0.0.1"
description = "Decompile SID register streams into a universal accumulator/table tracker language, losslessly."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.23", "lark>=1.1"]

[project.optional-dependencies]
# sidplayfp validation oracle (byte-exact ground truth for the docker corpus checks).
oracles = ["pysidtracker>=0.6"]
# The SID playroutine front end: deity-informant's 6510 VM (the sole capture path).
sid = ["deity-informant>=0.2"]
# Rendering the reconstructed register grid to audio (reSIDfp).
audio = ["pyresidfp>=0.1"]
dev = [
    "black>=24",
    "pylint>=3",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
    "numpy>=1.23",
]

[project.scripts]
tumbler-snapper = "tumbler_snapper.cli:main"

[tool.setuptools.packages.find]
include = ["tumbler_snapper*"]

[tool.black]
line-length = 100

[tool.pylint.main]
# Optional oracle / SID front-end deps, absent in the core (numpy-only) install.
ignored-modules = [
    "pysidtracker",
    "deity_informant",
    "pyresidfp",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "duplicate-code",
    "import-outside-toplevel",  # optional oracle/SID deps imported lazily
]

[tool.pylint.design]
max-locals = 20

[tool.pytest.ini_options]
addopts = "-n auto -q"
markers = ["oracle: byte-exact check against the sidplayfp docker oracle (needs Docker)"]
